# advent-of-code-2025

./: .clang-format  meson.build
src/: day1.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c
